# test

./: README.md  db.sqlite3  load_data.py  pyproject.toml
templates/: base.html
tree/: asgi.py  settings.py  wsgi.py
tree_menu/: admin.py  models.py  tests.py  urls.py  views.py
tree_menu/migrations/: 0001_initial.py  0002_alter_menuitem_options_alter_menuitem_slug_and_more.py
tree_menu/templatetags/: draw_menu.py
