[tool.poetry]
name = "tree"
version = "0.1.0"
description = ""
authors = ["Andrey Bolshakov <abolshakovy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"